--- a/harenec1/css/main.css
+++ b/harenec1/css/main.css
@@ -96,8 +96,14 @@ body {
 
 .nav-item {
     width: 17rem;
-    height: 100%;
+    height: 8rem;
     transition: all 300ms;
+}
+
+.nav-item:hover {
+    transition: all 300ms;
+    width: 20rem;
+    background-color: var(--webte-color-yellow);
 }
 
 .nav-item a {
@@ -111,12 +117,6 @@ body {
     text-align: center;
     color: white;
     padding: 1.5rem 0;
-}
-
-.nav-item:hover {
-    transition: all 300ms;
-    width: 20rem;
-    background-color: var(--webte-color-yellow);
 }
 
 main h1 {
@@ -194,7 +194,7 @@ button {
     padding: 2rem 5rem;
     background-color: var(--webte-color-ltBlack);
     color: white;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     font-family: "Anta", sans-serif;
     border-radius: 5px;
     transition: .5s;
